--- a/typeset/sec/val.tex
+++ b/typeset/sec/val.tex
@@ -180,3 +180,32 @@ $$
   \item[] $\text{IVPS}$: intrinsic value per share
   \item[] $\text{SO}$: shares outstanding
 \end{itemize}
+
+\renewcommand{\arraystretch}{1.8}
+
+\noindent
+\begin{tabular}{>{\raggedright\arraybackslash}p{0.15\textwidth}
+                >{\raggedright\arraybackslash}p{0.28\textwidth}
+                >{\raggedright\arraybackslash}p{0.28\textwidth}
+                >{\raggedright\arraybackslash}p{0.28\textwidth}}
+
+\textbf{} 
+& \textbf{FCFE $>$ Price} 
+& \textbf{FCFE $\approx$ Price} 
+& \textbf{FCFE $<$ Price} \\
+
+\textbf{FCFF $>$ Price}
+& \signalstrongbuy{} The firm's assets and operations generate more value than what is priced in by the market, and equity holders retain it — low leverage or efficient debt structure.
+& \signalbuy{} The firm's assets and operations are underpriced, but excess value is absorbed by debt or reinvestment, leaving equity fairly valued.
+& \signalcaution{} The firm's assets and operations are underpriced, but debt or reinvestment absorbs most cash flows — equity claims more than it economically receives. \\
+
+\textbf{FCFF $\approx$ Price}
+& \signalbuy{} The firm's assets and operations are fairly priced, but equity captures a disproportionately large share — market underprices the equity upside.
+& \signalhold{} The present value of free cash flows — to the firm (before payments to debt holders) and to equity (after them) — is consistent with market prices; no mispricing is evident.
+& \signalspeculative{} The business generates enough pre-financing cash flow to justify its market price, but equity holders retain too little after payments to debt holders. \\
+
+\textbf{FCFF $<$ Price}
+& \signalcaution{} The business is overvalued, but equity appears cheap due to temporarily favorable debt terms — value may be unstable under a leveraged structure.
+& \signalspeculative{} Equity is fairly priced, but depends on cash flows from a business generating less than what its market price would suggest — any decline in operations could undermine equity value.
+& \signalavoid{} There isn't sufficient cash flow to the business or the equity for the fundamentals to justify the high market price. \\
+\end{tabular}
